--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,8 +14,10 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "preact": "^10.6.4",
+    "react-dom": "^18.2.0",
+    "zustand": "^4.3.6",
+    "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
     "@commitlint/cz-commitlint": "^17.4.2",
@@ -26,6 +28,7 @@
     "daisyui": "^2.49.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
